force-app/main/default/objects/AgentToDo_UI_Command__e/fields/Screen__c.field-meta.xml
<CustomField>
    <fullName>Screen__c</fullName>
    <description
  >전환할 화면 키. today / calendar / mine / received / done / assistant 중 하나이며 LWC 의 activeMenu 값과 일치합니다.</description>
    <label>Screen</label>
    <type>Text</type>
    <length>40</length>
</CustomField>