force-app/main/default/objects/AgentToDo_UI_Command__e/fields/Target_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Target_User_Id__c</fullName>
    <description
  >이 명령을 적용할 사용자 Id. 플랫폼 이벤트는 구독자 전원에게 전달되므로, LWC 는 이 값이 자기 자신일 때만 반응합니다. 없으면 다른 사람 화면까지 전환됩니다.</description>
    <label>Target User Id</label>
    <type>Text</type>
    <length>18</length>
    <required>true</required>
</CustomField>